feat: add conditional check send welcome message

--- a/services/support/auth-server/src/main/resources/i18n/messages.properties
+++ b/services/support/auth-server/src/main/resources/i18n/messages.properties
@@ -1,3 +1,6 @@
+# Common
+app_name=jhipsterdemo
+
 # Error page
 error.title=Your request cannot be processed
 error.subtitle=Sorry, an error has occurred.
